2013-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp.bib: Updated versions for several CRAN packages

	* inst/CITATION: Add information about forthcoming book

2013-03-20 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/is_wide_string.h : fixes to re-enable wrap(
	vector<char> ) and wrap( vector<wchar_t> ), needed to support package
	httpuv
        * include/Rcpp/internal/wrap.h : same

2013-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/config.h: Define RCPP_USE_NEW_PRESERVE_RELEASE
	with default value of 0 to enable/disable new preserve/release code

	* src/api.cpp: Bracket the new Rcpp object preserve / release code
	with the new variable RCPP_USE_NEW_PRESERVE_RELEASE and fall back
	to R behaviour if not set

2013-03-12 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/Module.h: added virtual destructor to CppProperty

2013-03-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/platform/compiler.h: Improved g++ version
	detection with thanks to Yan Zhou

2013-02-28 JJ Allaire <jj@rstudio.org>

        * src/attributes.cpp: standalone roxygen chunks (e.g. to document
        a class) are now transposed into RcppExports.R

2013-02-27 JJ Allaire <jj@rstudio.org>

        * R/Rcpp.package.skeleton.R: eliminated spurious empty hello world
        function definition in Rcpp.package.skeleton

2013-02-24 JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: add global package include file to RcppExports.cpp
        if it exists; handle Rcpp module definitions in sourceCpp
        * src/attributes.cpp: handle Rcpp module definitions in sourceCpp
        * man/sourceCpp.Rd: documentation updates

2013-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/platform/compiler.h: As deteced by Gong-Yi Liao,
	we need to test for __LONG_LONG_MAX__ (defined in limits.h) and not
	LONG_LONG_MAX (defined climits which we do not include)
